namespace Dominio.Enums;

public enum FormaDePagamento
{
    Pix,
    Credito,
    Debito,
    Dinheiro
}
