namespace Dominio.Enums;

public enum Funcao
{
    Admin,
    Vendedor
}